Fixes the last bug due to deletion of sales invoices
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1705 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/financial_year.html.haml
+++ b/app/views/accountancy/financial_year.html.haml
@@ -3,10 +3,8 @@
   -t.print :income_statement, :id=>@financial_year.id
 
 %h2= tc 'general_informations'
-%table
-  %tr
-    %td
-      =evalue @financial_year, :started_on
-      =evalue @financial_year, :stopped_on
-    %td
-      =evalue @financial_year, :closed
+=attributes_list(@financial_year) do |l|
+  -l.attribute :started_on
+  -l.attribute :stopped_on
+  -l.attribute :closed
+  -l.attribute :code
