--- a/app/views/company/about.html.haml
+++ b/app/views/company/about.html.haml
@@ -1,8 +1,8 @@
 #about-us
   %div
     =link_to image_tag("ekylong.png"), "http://www.ekylibre.org"
-    %table.evalue
+    %table.attribute-list
       -for p in @properties
-        %tr.evalue
+        %tr
           %td.label=p[0]
           %td.value=p[1]
