--- a/app/views/management/statistics.html.haml
+++ b/app/views/management/statistics.html.haml
@@ -15,7 +15,7 @@
           %label=tc("data_to_export")
           -for x in [:quantity, :pretax_amount, :amount]
             =radio_button_tag "mode", x
-            %label{:for=>"mode_#{x}"}=SalesInvoice.human_attribute_name(x)
+            %label{:for=>"mode_#{x}"}=SalesOrderLine.human_attribute_name(x)
       %tr
         %td.crit
           %label=tc("source")
