--- a/app/views/relations/entity.html.haml
+++ b/app/views/relations/entity.html.haml
@@ -11,7 +11,7 @@
   -l.attribute :code
   -l.attribute :active
   -l.attribute :website unless @entity.website.blank?
-  -l.evalue Entity.human_attribute_name("country"), image_tag("countries/"+@entity.country+".png")+" "+t("countries."+@entity.country) unless @entity.country.blank?
+  -l.custom Entity.human_attribute_name("country"), image_tag("countries/"+@entity.country+".png")+" "+t("countries."+@entity.country) unless @entity.country.blank?
   -l.attribute :siren unless @entity.siren.blank?
   -l.attribute :activity_code unless @entity.activity_code.blank?
   -l.attribute :vat_number unless @entity.vat_number.blank?
@@ -40,7 +40,7 @@
     -l.attribute :attorney_account, :url=>{:controller=>:accountancy, :action=>:account}
   -l.attribute :transporter
   -for datum in @entity.custom_field_data.find(:all, :joins=>"JOIN custom_fields ON (custom_fields.id=custom_field_id)", :order=>"position")
-    -l.evalue datum.custom_field.name, datum.value.to_s unless datum.value.to_s.blank?
+    -l.custom datum.custom_field.name, datum.value.to_s unless datum.value.to_s.blank?
 
  
 =tabbox(:entity) do |tb|
