--- a/app/views/relations/entity_category.html.haml
+++ b/app/views/relations/entity_category.html.haml
@@ -1,14 +1,12 @@
-= toolbar do
-  - link :entity_category_update, :id=>@entity_category.id
+=toolbar do |t|
+  -t.update @entity_category
 
-%table
-  %tr
-    %td
-      =evalue @entity_category, :name
-      =evalue @entity_category, :by_default
-      =evalue @entity_category, :description
+=attributes_list(@entity_category) do |l|
+  -l.attribute :name
+  -l.attribute :by_default
+  -l.attribute :description
     
 %h2=tc :x_prices, :count=>@category_prices_count
-=toolbar do
-  -link :price_create, {:controller=>:management, :mode=>:sales}
+=toolbar do |t|
+  -t.link :price_create, {:controller=>:management, :mode=>:sales}
 =kame :category_prices
