--- a/app/views/management/_sale_line_detail_row_form.html.haml
+++ b/app/views/management/_sale_line_detail_row_form.html.haml
@@ -4,7 +4,7 @@
       %td=SaleLine.human_attribute_name("quantity")
       -if @current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
         %td=SaleLine.human_attribute_name("reduction_percent") 
-      -if product.manage_stocks
+      -if product.stockable
         %td=SaleLine.human_attribute_name("stock")
     %tr
       %td
@@ -12,7 +12,7 @@
         =product.unit.label
       -if @current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
         %td=text_field(:sale_line, :reduction_percent, :size=>5)
-      -if product.manage_stocks
+      -if product.stockable
         %td=select(:sale_line, :stock_id, product_stocks_options(product))
   -if product.nature == "subscrip"
     .count=product.default_subscription_label_for(@sale.client)
