--- a/app/views/management/product.html.haml
+++ b/app/views/management/product.html.haml
@@ -16,7 +16,7 @@
   -l.attribute :catalog_description
   -l.attribute :description
   -l.attribute :comment
-  -l.attribute :manage_stocks
+  -l.attribute :stockable
 
 =tabbox(:product) do |tb|
   -tb.tab :prices do
