Fixes the acts_as_stockable extension
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1713 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/user_statistics.html.haml
+++ b/app/views/company/user_statistics.html.haml
@@ -23,9 +23,10 @@
       %tr.total
         %th=tc(:total_unpaid_amount)
         %td=number_to_management (invoiced_amount - @current_user.sales_invoices.sum(:paid_amount, :conditions=>conditions[:invoiced_on]))
-      %tr.total
-        %th=tc(:profitability)
-        %td=number_to_percentage 100*(paid_amount/invoiced_amount)
+      -if invoiced_amount > 0
+        %tr.total
+          %th=tc(:profitability)
+          %td=number_to_percentage 100*(paid_amount/invoiced_amount)
   -started_at, stopped_at = params[:started_on].beginning_of_day, params[:stopped_on].end_of_day
   -cond = ["created_at BETWEEN ? AND ?", started_at, stopped_at]
   -u.cell :x_events, :count=>@current_user.events.count(:id, :conditions=>cond) do
