--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -2,7 +2,7 @@
   %h2=tg('indicator')
   %ul
     =li_link_to tc('x_waiting_outgoing_deliveries', :count=>@deliveries.size), :action=>:undelivered_sales
-    =li_link_to tc('nb_transfers', :count=>@stock_transfers.size), :action=>:unexecuted_transfers
+    =li_link_to tc('nb_transfers', :count=>@stock_transfers.size), :action=>:stock_transfers_confirm
 - if @stocks.size > 0
   %h2= tc('low_stocks')
   .stocks=kame :critic_stocks
