--- a/app/views/management/stocks.html.haml
+++ b/app/views/management/stocks.html.haml
@@ -1,9 +1,13 @@
 -if @current_company.stocks.size > 0
   .search
     =form_tag({}, {:method=>:get}) do
-      =tc('select_warehouse')
-      =select_tag(:warehouse_id, options_for_select([[]]+@warehouses.collect{|x| [x.name, x.id]}, session[:warehouse_id]))
-      =submit_tag(tg('filter'))
+      %table
+        %tr
+          %td.crit
+            =tc('select_warehouse')
+            =select_tag(:warehouse_id, options_for_select([[]]+@warehouses.collect{|x| [x.name, x.id]}, session[:warehouse_id]))
+          %td=submit_tag(tg('filter'))
+
   =toolbar do |t|
     -t.print :stocks, :p0=>Date.today.to_s
 =kame :stocks
