--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -1,8 +1,12 @@
-.menu.indicator
-  %h2=tg('indicator')
-  %ul
-    =li_link_to tc('x_waiting_outgoing_deliveries', :count=>@deliveries.size), :action=>:undelivered_sales
-    =li_link_to tc('nb_transfers', :count=>@stock_transfers.size), :action=>:stock_transfers_confirm
-- if @stocks.size > 0
-  %h2= tc('low_stocks')
-  .stocks=kame :critic_stocks
+=unagi do |u|
+  -u.cell :indicator do
+    %ul
+      -if (count = @current_company.undelivered_outgoing_deliveries.size) > 0
+        =li_link_to(tc('x_waiting_outgoing_deliveries', :count=>count), :action=>:outgoing_deliveries, :mode=>:unconfirmed)
+      -if (count = @current_company.undelivered_incoming_deliveries.size) > 0
+        =li_link_to(tc('x_waiting_incoming_deliveries', :count=>count), :action=>:incoming_deliveries, :mode=>:unconfirmed)
+      -if (count = @current_company.unconfirmed_stock_transfers.size) > 0
+        =li_link_to(tc('x_stock_transfers_to_confirm', :count=>count), :action=>:stock_transfers, :mode=>:unconfirmed)
+  -if @current_company.critic_stocks.size > 0
+    -u.cell :critic_stocks do
+      =kame :critic_stocks
