--- a/app/views/authentication/register.html.haml
+++ b/app/views/authentication/register.html.haml
@@ -2,11 +2,11 @@
   =form_tag do
     .fields
       =formalize do |f|
-        -f.error 'company'
+        -f.error 'my_company'
         -f.error 'user'
         -f.title :my_company
-        -f.field :company, :name, {:example=>tc(:company_name_example)}
-        -f.field :company, :code, {:example=>tc(:company_name_example)}
+        -f.field :my_company, :name, {:example=>tc(:company_name_example)}
+        -f.field :my_company, :code, {:example=>tc(:company_name_example)}
         -f.title :my_self
         -f.field :user, :last_name
         -f.field :user, :first_name, :example=>tc(:user_first_name_example)
