Fixes some bugs with SQL Server
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1717 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/_operation_form.html.haml
+++ b/app/views/production/_operation_form.html.haml
@@ -23,7 +23,7 @@
             %th=OperationLine.human_attribute_name("product_id")
             %th=OperationLine.human_attribute_name("quantity")
             %th=OperationLine.human_attribute_name("tracking_id")
-            %th=OperationLine.human_attribute_name("location_id")
+            %th=OperationLine.human_attribute_name("warehouse_id")
             %th.act
         %tbody#lines=render :partial=>'operation_line_row_form', :collection=>(@operation_lines||@operation.lines)
       =toolbar do |t|
