Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1723 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/finances/_incoming_payment_mode_form.html.haml
+++ b/app/views/finances/_incoming_payment_mode_form.html.haml
@@ -7,7 +7,7 @@
 #accountancy
   =formalize do |f|
     -f.title :accountancy
-    -f.field :incoming_payment_mode, :cash_id, :choices=>{:reflection=>:cashes}, :new=>{:controller=>:accountancy, :action=>:cash_create}
+    -f.field :incoming_payment_mode, :cash_id, :choices=>{:reflection=>:cashes}, :new=>{:controller=>:finances, :action=>:cash_create}
     -f.field :incoming_payment_mode, :with_deposit, :onchange=>"toggleDeposit();"
     -f.field :incoming_payment_mode, :with_commission, :onchange=>"toggleCommission();"
   
