--- a/app/views/finances/_deposit_form.html.haml
+++ b/app/views/finances/_deposit_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   - f.error :deposit
   - f.title :infos
-  - f.field :deposit, :cash_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:controller=>:accountancy, :action=>:cash_create, :nature=>:bank_account}
+  - f.field :deposit, :cash_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:controller=>:finances, :action=>:cash_create, :nature=>:bank_account}
   - f.field :deposit, :responsible_id, :choices=>{:reflection=>:users}
   - f.field :deposit, :created_on
   - f.field :deposit, :comment
