--- a/app/views/finances/_outgoing_payment_mode_form.html.haml
+++ b/app/views/finances/_outgoing_payment_mode_form.html.haml
@@ -7,7 +7,7 @@
 #accountancy
   =formalize do |f|
     -f.title :accountancy
-    -f.field :outgoing_payment_mode, :cash_id, :choices=>{:reflection=>:cashes}, :new=>{:controller=>:accountancy, :action=>:cash_create}
+    -f.field :outgoing_payment_mode, :cash_id, :choices=>{:reflection=>:cashes}, :new=>{:controller=>:finances, :action=>:cash_create}
 
 :javascript
   window.toggleAccountancy = function() { toggleElement('accountancy', $('outgoing_payment_mode_with_accounting').checked); }
