--- a/app/views/finances/deposit.html.haml
+++ b/app/views/finances/deposit.html.haml
@@ -4,7 +4,7 @@
 
 =attributes_list(@deposit) do |l|
   -l.attribute :number
-  -l.attribute :cash, :url=>{:controller=>:accountancy, :action=>:cash}
+  -l.attribute :cash, :url=>{:controller=>:finances, :action=>:cash}
   -l.attribute :payments_count
   -l.attribute :responsible
   -l.attribute :comment
