Back to Rails 2.3.10 INSTABLE
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1724 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account_mark.html.haml
+++ b/app/views/accountancy/account_mark.html.haml
@@ -1,5 +1,5 @@
 .search
-  =form_tag({}, :method=>:get) do
+  =keishiki_tag({}, :method=>:get) do
     %table
       %tr
         %td.crit=journal_period_crit
@@ -15,7 +15,7 @@
 
 =error_messages "account"
 
-=form_tag() do
+=keishiki_tag() do
   .fields
     -for x in [:period, :started_on, :stopped_on]
       =hidden_field_tag(x, params[x])
