--- a/app/views/finances/unvalidated_deposits.html.haml
+++ b/app/views/finances/unvalidated_deposits.html.haml
@@ -1,5 +1,5 @@
 - if @deposits.size > 0
-  =form_tag do
+  =keishiki_tag do
     =kame :unvalidated_deposits
     .actions
       =link_to tg(:previous), :action=>:index
