--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,4 +25,4 @@
           .yield.flex
             =notifications_tag
             =yield
-          #legals="Ekylibre - "+Ekylibre.version
+          #legals="Ekylibre "+Ekylibre.version+" - Ruby on Rails "+Rails.version
