--- a/app/views/management/sale_cancel.html.haml
+++ b/app/views/management/sale_cancel.html.haml
@@ -9,7 +9,7 @@
 
 =error_messages('sale', :object=>@credit) if @credit
 
-=form_tag() do
+=keishiki_tag() do
   =kame :sale_creditable_lines
   .actions
     =submit_tag(tc('validate'))
