--- a/app/views/management/sales.html.haml
+++ b/app/views/management/sales.html.haml
@@ -1,7 +1,7 @@
 =toolbar do 
   -link :unpaid_sales_export
 .search
-  =form_tag do
+  =keishiki_tag do
     %table
       %tr
         %td.label=tc('search_sales')
