--- a/app/views/relations/entities_merge.html.haml
+++ b/app/views/relations/entities_merge.html.haml
@@ -1,4 +1,4 @@
-=form_tag do
+=keishiki_tag do
   =formalize do |f|
     -f.field tc(:entity_to_update), dyli_tag(:master, :entities)
     -f.field tc(:entity_to_delete), dyli_tag(:double, :entities)
