--- a/app/views/relations/mandates_configure.html.haml
+++ b/app/views/relations/mandates_configure.html.haml
@@ -1,4 +1,4 @@
-=form_tag(:action=>:mandates_configure) do 
+=keishiki_tag(:action=>:mandates_configure) do 
   =auto_complete_stylesheet
   %table.kame
     %tr
