--- a/app/views/shared/_entities_search.html.haml
+++ b/app/views/shared/_entities_search.html.haml
@@ -1,5 +1,5 @@
 .search
-  =form_tag({:controller=>:relations, :action=>:entities}, :method=>:get) do
+  =keishiki_tag({:controller=>:relations, :action=>:entities}, :method=>:get) do
     %table
       %tr
         %td.label=tc("search")
