--- a/app/views/accountancy/journal.html.haml
+++ b/app/views/accountancy/journal.html.haml
@@ -12,7 +12,7 @@
   -l.attribute :closed_on
 
 .search
-  =form_tag({}, :method=>:get) do
+  =keishiki_tag({}, :method=>:get) do
     %table
       %tr
         %td.crit
