--- a/app/views/company/backups.html.haml
+++ b/app/views/company/backups.html.haml
@@ -1,11 +1,11 @@
-=form_tag({}) do
+=keishiki_tag({}) do
   %fieldset
     %legend=tc(:export_backup)
     =formalize do |f|
       -f.field content_tag(:label, tc(:with_prints), :for=>:with_prints), check_box_tag(:with_prints)
     .actions=submit_tag tc(:backup), :name=>'backup'
 
-=form_tag({}, :multipart=>true) do
+=keishiki_tag({}, :multipart=>true) do
   %fieldset
     %legend=tc(:import_backup)
     =formalize do |f|
