--- a/app/views/company/import.html.haml
+++ b/app/views/company/import.html.haml
@@ -1,4 +1,4 @@
-=form_tag(nil, {:multipart=>true, :class=>"vbox flex", :style=>'overflow:none'}) do
+=keishiki_tag(nil, {:multipart=>true, :class=>"vbox flex", :style=>'overflow:none'}) do
   .fields.flex
     =formalize do |f|
       -f.field tc("file_to_import"), file_field_tag(:upload)
