--- a/app/views/management/_transport_deliveries.html.haml
+++ b/app/views/management/_transport_deliveries.html.haml
@@ -1,5 +1,5 @@
 =kame :transport_deliveries
-=form_tag(:action=>:transport_deliveries) do 
+=keishiki_tag(:action=>:transport_deliveries) do 
   %table.formalize
     %tr.title
       %th{:colspan=>2}=tc(:add_outgoing_delivery)
