--- a/app/views/management/inventory_create.html.haml
+++ b/app/views/management/inventory_create.html.haml
@@ -1,4 +1,4 @@
-=form_tag() do
+=keishiki_tag() do
   =formalize do |f|
     - f.title :general
     - f.field :inventory, :responsible_id, :choices=>{:reflection=>:users}
