--- a/app/views/management/statistics.html.haml
+++ b/app/views/management/statistics.html.haml
@@ -1,6 +1,6 @@
 =javascript_include_tag "raphael", "g.raphael", "g.line"
 
-=form_tag({}, :method=>:put) do 
+=keishiki_tag({}, :method=>:put) do 
   .search
     %table
       %tr
