--- a/app/views/management/stock_transfers_confirm.html.haml
+++ b/app/views/management/stock_transfers_confirm.html.haml
@@ -1,5 +1,5 @@
 -if @stock_transfers.size > 0
-  =form_tag do
+  =keishiki_tag do
     =kame :stock_transfers_confirm
     .actions
       =link_to tg(:previous), :action=>:index
