--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -1,4 +1,4 @@
-=form_tag({:id=>@step}, :multipart=>true, :style=>'overflow:none', :class=>"vbox flex") do
+=keishiki_tag({:id=>@step}, :multipart=>true, :style=>'overflow:none', :class=>"vbox flex") do
   .fields.flex
     -if @step == :upload
       =formalize do |f|
