--- a/app/views/production/land_parcels.html.haml
+++ b/app/views/production/land_parcels.html.haml
@@ -29,7 +29,7 @@
               .area=tl(:x_unit, :quantity=>land_parcel.area_measure, :unit=>land_parcel.area_unit.name)
               .desc=land_parcel.description
               %ul.operations
-                -for operation in land_parcel.operations.where("COALESCE(moved_on, planned_on) < ? ", session[:viewed_on]).limit(5)
+                -for operation in land_parcel.operations.find(:all, :conditions=>["COALESCE(moved_on, planned_on) < ? ", session[:viewed_on]], :limit=>5)
                   %li=link_to(operation.name, {:action=>:operation, :id=>operation.id})
   #merge
     .fields
