--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -101,7 +101,8 @@ body { background: #C9D7F1; }
 
 #wrap { border-top: 1px solid #95b0e4; background: #C9D7F1; }
 
-#legals { text-align: center; color: #047; font-size: 11px; padding: 4px; }
+#legals { text-align: center; padding: 4px; }
+#legals, #legals * { color: #047; font-size: 11px; }
 
 .dialog {  background: #C9D7F1; box-shadow: 0px 0px 12px #555; -moz-box-shadow: 0px 0px 12px #555; -webkit-box-shadow: 0px 0px 12px #555;}
 .dialog .wrap { border: 4px solid #95b0e4; }
