Sets form_tag back
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1726 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_accounts_search.html.haml
+++ b/app/views/accountancy/_accounts_search.html.haml
@@ -1,5 +1,5 @@
 .search
-  =keishiki_tag({:controller=>:accountancy, :action=>:accounts}, :method=>:get) do
+  =form_tag({:controller=>:accountancy, :action=>:accounts}, :method=>:get) do
     =hidden_field_tag(:prefix, params[:prefix])
     %table
       %tr
