--- a/app/views/accountancy/draft.html.haml
+++ b/app/views/accountancy/draft.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
+=form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
   .fields.flex
     =journals_tag
     .search
