--- a/app/views/accountancy/financial_year_close.html.haml
+++ b/app/views/accountancy/financial_year_close.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag do
+=form_tag do
   =formalize do |f|
     -f.error :financial_year
     -f.field FinancialYear.model_name.human, @financial_year.code
