--- a/app/views/company/change_password.html.haml
+++ b/app/views/company/change_password.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag(nil, {:class=>"flex vbox", :style=>'overflow:none'}) do
+=form_tag(nil, {:class=>"flex vbox", :style=>'overflow:none'}) do
   .fields.flex
     =formalize do |f|
       -f.error 'user'
