--- a/app/views/management/prices_import.html.haml
+++ b/app/views/management/prices_import.html.haml
@@ -13,6 +13,6 @@
 
 
 %h2=tc('file_to_download')
-=keishiki_tag({}, :multipart=>true) do
+=form_tag({}, :multipart=>true) do
   =file_field(:csv_file, :path)
   =submit_tag('ok',:action=>:prices_import) 
