--- a/app/views/management/transport_update.html.haml
+++ b/app/views/management/transport_update.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag do
+=form_tag do
   =render :partial=>'transport_form'
   .actions
     =submit_tag(tg(:validate), :action=>:transport_update)
