--- a/app/views/production/land_parcel_divide.html.haml
+++ b/app/views/production/land_parcel_divide.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag({}, :class=>"flex") do
+=form_tag({}, :class=>"flex") do
   .fields.flex
     =formalize do |f|
       -f.error :land_parcel
