--- a/app/views/management/prices.html.haml
+++ b/app/views/management/prices.html.haml
@@ -1,6 +1,6 @@
 -if @suppliers.size>0
   .search
-    =keishiki_tag do
+    =form_tag do
       %label=tc "display"
       -for mode in @modes
         =radio_button(:price, :mode , mode, :checked=>( mode=="all" ? true : false))+" "+content_tag(:label, tc("prices_for_"+mode), :for=>'price_mode_'+mode)
