--- a/app/views/production/production_chain_play.html.haml
+++ b/app/views/production/production_chain_play.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag({}, :class=>"flex") do
+=form_tag({}, :class=>"flex") do
   .search
     =select_tag("operation_id", options_for_select([[]]+@production_chain.operations.collect{|x| [x.name, x.id]}, params[:operation_id].to_i))
   .fields.flex
