--- a/app/views/relations/_districts_search.html.haml
+++ b/app/views/relations/_districts_search.html.haml
@@ -1,6 +1,6 @@
 
 .search
-  =keishiki_tag(:action=>:districts) do
+  =form_tag(:action=>:districts) do
     %table
       %tr
         %td.label=tc(:search)
