--- a/app/views/relations/entities_export.html.haml
+++ b/app/views/relations/entities_export.html.haml
@@ -1,4 +1,4 @@
-=keishiki_tag({:id=>@step}, :multipart=>true, :style=>'overflow:none', :class=>"vbox flex") do
+=form_tag({:id=>@step}, :multipart=>true, :style=>'overflow:none', :class=>"vbox flex") do
   .fields.vbox.flex{:style=>'overflow:none'}
     .form-column{:style=>"float:left; width: 200px;"}
       -params[:columns] ||= {}
