--- a/app/views/finances/_cash_accountancy_form.html.haml
+++ b/app/views/finances/_cash_accountancy_form.html.haml
@@ -2,8 +2,8 @@
 =formalize do |f|  
   -f.title :accountancy
   -if nature == "bank_account"
-    -f.field :cash, :account_id, :choices=>{:reflection=>:banks_accounts}, :new=>{:action=>:account_create, :number=>@current_company.preferred_financial_banks_accounts}
-    -f.field :cash, :journal_id, :choices=>{:reflection=>:bank_journals}, :new=>{:action=>:journal_create, :nature=>:bank}
+    -f.field :cash, :account_id, :choices=>{:reflection=>:banks_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create, :number=>@current_company.preferred_financial_banks_accounts}
+    -f.field :cash, :journal_id, :choices=>{:reflection=>:bank_journals}, :new=>{:controller=>:accountancy, :action=>:journal_create, :nature=>:bank}
   -elsif nature == "cash_box"
-    -f.field :cash, :account_id, :choices=>{:reflection=>:cashes_accounts}, :new=>{:action=>:account_create, :number=>@current_company.preferred_financial_cashes_accounts}
-    -f.field :cash, :journal_id, :choices=>{:reflection=>:cash_journals}, :new=>{:action=>:journal_create, :nature=>:cash}
+    -f.field :cash, :account_id, :choices=>{:reflection=>:cashes_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create, :number=>@current_company.preferred_financial_cashes_accounts}
+    -f.field :cash, :journal_id, :choices=>{:reflection=>:cash_journals}, :new=>{:controller=>:accountancy, :action=>:journal_create, :nature=>:cash}
