--- a/app/views/finances/cash.html.haml
+++ b/app/views/finances/cash.html.haml
@@ -4,8 +4,8 @@
 =attributes_list(@cash) do |l|
   -l.attribute :name
   -l.attribute :nature_label
-  -l.attribute :journal, :url=>{:action=>:journal}
-  -l.attribute :account, :url=>{:action=>:account}
+  -l.attribute :journal, :url=>{:controller=>:accountancy, :action=>:journal}
+  -l.attribute :account, :url=>{:controller=>:accountancy, :action=>:account}
   -l.attribute :bank_name
   -l.attribute :address
   -if @cash.bank_account?
