--- a/app/views/finances/deposit.html.haml
+++ b/app/views/finances/deposit.html.haml
@@ -5,6 +5,7 @@
 =attributes_list(@deposit) do |l|
   -l.attribute :number
   -l.attribute :cash, :url=>{:controller=>:finances, :action=>:cash}
+  -l.attribute :mode # , :url=>{:controller=>:finances, :action=>:incoming_payment_mode}
   -l.attribute :payments_count
   -l.attribute :responsible
   -l.attribute :comment
