--- a/app/views/finances/_outgoing_payment_use_form.html.haml
+++ b/app/views/finances/_outgoing_payment_use_form.html.haml
@@ -2,4 +2,4 @@
   -f.error 'outgoing_payment_use'
   -f.field :outgoing_payment_use, :downpayment
   -f.field :outgoing_payment_use, :payment_id, :choices=>{:reflection=>:usable_outgoing_payments}, :new=>{:action=>:outgoing_payment_create, :payee_id=>@outgoing_payment_use.expense.supplier_id, :amount=>@outgoing_payment_use.expense.unpaid_amount}
-=hidden_field_tag("expense_id", params[:expense_id])
+=hidden_field(:outgoing_payment_use, :expense_id)
