Fixes bug on journal and adds link to print sales
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1741 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sale.html.haml
+++ b/app/views/management/sale.html.haml
@@ -13,8 +13,7 @@
     -t.print :sales_invoice, :id=>@sale.id
     -t.cancel @sale
   -else
-    -t.print :sale, :id=>@sale.id
-  -t.link :sale, :id=>@sale.id, :format=>:pdf
+    -t.print :sales_order, :id=>@sale.id
 
 =attributes_list(@sale) do |l|
   -l.attribute :client, :label=>:label, :url=>{:controller=>:relations, :action=>:entity}
